@startuml
hide circle
skinparam linetype ortho

' ユーザー管理機能
' 商品出品機能
' 商品購入機能

entity "users" as users {
  id
  :nickname (string,null: false)
  :email (string,null: false,unique: true)
  :encrypted_password (string,null: false)
  :last_name (string,null: false)
  :first_name (string,null: false)
  :last_name_kana (string,null: false)
  :first_name_kana (string,null: false)
  :birth_date (date,null: false)
}

entity "items" as items {
  id
  :name (string,null: false)
  :price (integer,null: false)
  :description (text,null: false)
  :category_id (integer,null: false)
  :condition_id (integer,null: false)
  :shipping_fee_burden_id (integer,null: false)
  :prefecture_id (integer,null: false)
  :shipping_date_estimate_id (integer,null: false)
  :user (references,null: false,foreign_key: true)
}

entity "orders" as orders {
  id
  :user (references,null: false,foreign_key: true)
  :item (references,null: false,foreign_key: true)
}

entity "addresses" as addresses {
  id
  :postal_code (string,null: false)
  :prefecture_id (integer,null: false)
  :city (string,null: false)
  :house_number (string,null: false)
  :building_name (string)
  :phone_number (string,null: false)
  :order (references,null: false, foreign_key: true)
}

users ||--o{ items
users ||--o{ orders
items ||--|| orders
orders ||--|| addresses

@enduml